--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
 
     <application
+        android:name=".BudgetWatcherApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,13 +23,6 @@
             android:name=".activities.SettingsActivity"
             android:label="@string/title_activity_settings" >
         </activity>
-
-        <provider
-            android:name=".content.BudgetProvider"
-            android:authorities="by.vfedorenko.budgetwatcher.content.BudgetProvider"
-            android:enabled="true"
-            android:exported="false" >
-        </provider>
 
         <receiver android:name=".utils.SmsReceiver">
             <intent-filter>
